--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,122 @@
-body {
-    background-color:violet;
-    border: 1px solid red;
+*{
+    /*border: 1px solid red;*/
+}
+body{
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    height: 5vh;
+    width: 100%;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    background-color: #365E32;
+    align-items: center;
+    box-shadow: 0px 2px 8px black;
+}
+header a{
+    color: #FF004D;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 6px;
+    font-weight: bold;
+}
+.navbar{
+    margin-right: 10px;
+}
+.logo{
+    margin-left: 10px;
+}
+section{
+    padding-top: 5vh;
+    height: 90vh;
+    background-color: #E7D37F;
+}
+.con{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: start;
+    padding-top: 10vh;
+}
+.Myphoto{
+    width: 250px;
+    float: right;
+    border-radius: 10%;
+}
+.Profile{
+    width: 30%;
+    align-items: center;
+    
 }
 .info{
-    display: flex;
-    justify-content: center;
+    width: 60%;
+    padding: 20px;
+    white-space: normal;
+    color: #81A263;
 }
-.contain{
-    height: 100vh;
-    width: 100vh;
-    align-items: center;
+footer{
+    background-color:#FD9B63 ;
+    width: 100%;
+    height: 5vh;
+    box-shadow: 0px -2px 8px black;
+}
+.info h1{
+    font-size: 36px;
 }
 .info p{
-    margin-left: 300px;
+    font-size: 20px;
+    border: 1px solid #365E32;
+    width: 80%;
 }
+.info ul{
+    font-size: 20px;
+    border: 1px solid #365E32;
+    width: 70%;
+}
+.ExperiancePhoto{
+    height: 250px;
+    float: right;
+    margin-right: 40%;
+}
+img{
+    width: 100%;
+    border-radius: 10%;
+}
+.Photo{
+    width: 100%;
+}
+.HAHAHA{
+    width: 300px;
+    float: right;
+    margin-right: 50%;
+}
+.contact{
+    display: flex;
+    flex-wrap: wrap;
+    float: right;
+    margin-right: 50%;
+}
+.Facebook{
+    width: 80px;  
+}
+.MSteam{
+    width: 80px;  
+}
+.Facebook img{
+    width: 50px;
+}
+.MSteam img{
+    width: 50px;
+}
+
+
+
+
+
+    
+
 
